; ModuleID = '/home/carl/AnghaBench/linux/drivers/s390/cio/extr_qdio_thinint.c_clear_nonshared_ind.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/s390/cio/extr_qdio_thinint.c_clear_nonshared_ind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qdio_irq = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @clear_nonshared_ind(%struct.qdio_irq* %0) #0 {
  %2 = alloca %struct.qdio_irq*, align 8
  store %struct.qdio_irq* %0, %struct.qdio_irq** %2, align 8
  %3 = load %struct.qdio_irq*, %struct.qdio_irq** %2, align 8
  %4 = call i32 @is_thinint_irq(%struct.qdio_irq* %3)
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  br label %17

7:                                                ; preds = %1
  %8 = load %struct.qdio_irq*, %struct.qdio_irq** %2, align 8
  %9 = call i64 @shared_ind(%struct.qdio_irq* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %7
  br label %17

12:                                               ; preds = %7
  %13 = load %struct.qdio_irq*, %struct.qdio_irq** %2, align 8
  %14 = getelementptr inbounds %struct.qdio_irq, %struct.qdio_irq* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @xchg(i32 %15, i32 0)
  br label %17

17:                                               ; preds = %12, %11, %6
  ret void
}

declare dso_local i32 @is_thinint_irq(%struct.qdio_irq*) #1

declare dso_local i64 @shared_ind(%struct.qdio_irq*) #1

declare dso_local i32 @xchg(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
